Update to latest ember.
Was asking for some ember-template-compiler so I added it.

--- a/demos/01-dbmon/ember/index.html
+++ b/demos/01-dbmon/ember/index.html
@@ -57,9 +57,10 @@
 
 <script src="http://code.jquery.com/jquery.js"></script>
 
+<script src="http://builds.emberjs.com/tags/v1.10.0/ember-template-compiler.js"></script>
 <script src="http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-v2.0.0.js"></script>
 <!--<script src="http://builds.emberjs.com/tags/v1.9.1/ember.js"></script>-->
-<script src="http://builds.emberjs.com/tags/v1.10.0-beta.4/ember.prod.js"></script>
+<script src="http://builds.emberjs.com/tags/v1.10.0/ember.prod.js"></script>
 
 <script src="../ENV.js"></script>
 <script src="./app.js"></script>
