--- a/demos/index.html
+++ b/demos/index.html
@@ -42,33 +42,30 @@ a:visited {
   <li><a href="01-dbmon/react">DBMON React</a></li>
 </ul>
 
-<p>25:00</p>
+<ul>
+  <li><a href="01-PerfTools">PerfTools</a></li>
+</ul>
+
 
 <ul>
   <li><a href="02-1-magic-move">MagicMove United States</a></li>
   <li><a href="02-2-magic-move-buddy-list">MagicMove BuddyList</a></li>
 </ul>
 
-<p>20:00</p>
-
 <ul>
-  <li><a href="react-a11y">react-a11y</a></li>
   <li><a href="03-portals/">Portals</a></li>
   <li><a href="04-dom-lib-interop/">DOM Lib Interop</a></li>
 </ul>
-
-<p>15:00</p>
 
 <ul>
   <li><a href="05-router-animations">Routed Animation</a></li>
   <li><a href="06-itunes-style-interface">iTunes</a></li>
 </ul>
 
-<p>10:00</p>
 
 <ul>
   <li><a href="http://react-router-mega-demo.herokuapp.com">Isomorphism</a></li>
+  <li><a href="https://rawgit.com/chenglou/react-state-stream/master/index.html">React State Stream - Complex Animation Solution</a></li>
 </ul>
 
-<p>5:00</p>
 
